kubernetes/apps/authentik/authentik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: authentik
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames: ["authentik.endsys.cloud"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
